Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a id="csci-221-de" class="anchor" href="#csci-221-de" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CSCI 221, DE</h1>
 
 <h2>
-<a id="important-links" class="anchor" href="#important-links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Important Links</h2>
+<a id="important-links-material-and-software" class="anchor" href="#important-links-material-and-software" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Important Links, Material, and Software</h2>
 
 <ul>
 <li><a href="https://www.facebook.com/groups/473659052805316/">Facebook Group</a></li>
@@ -51,6 +51,7 @@
 <li><a href="https://www.udacity.com/course/intro-to-java-programming--cs046">Lessons and Programming Assignments: Udacity</a></li>
 <li><a href="https://docs.google.com/presentation/d/1CD5Xvo-56QPNRT8uBZ41oBxRY97-SmqPabTns2ojaPQ/edit?usp=sharing">Schedule, news, and assignments. You must check this regularly</a></li>
 <li><a href="https://www.dropbox.com/sh/tz1yoyk7091cpf3/AAAVLCVvdPnNINU_R47a6Bp5a?dl=0">Course Materials</a></li>
+<li><a href="http://www.bluej.org/">Software - BlueJ</a></li>
 </ul>
 
 <h1>
@@ -78,7 +79,7 @@ CSCI 221 Computer Programming II This course further develops object-oriented pr
 <ul>
 <li>Professor: Dr. Paul Anderson</li>
 <li>Office: 313 HWEA</li>
-<li>Office Hours: My door is always open. Even if it isn't, please knock. I always love to hear from students. I have a * little sign that I try to keep up in the window to show when I am in the office. Tuesday and Thursday from 2:00 - 3:30 PM are my official hours.</li>
+<li>Office Hours: Since this is an online course my office hours will be virtual. Specifically, I will be on Facebook to communicate via the messenger from 3-5 PM on Tuesday/Thursday. </li>
 <li>E-mail: <a href="mailto:andersonpe2@cofc.edu">andersonpe2@cofc.edu</a>
 </li>
 <li>Office Phone: 953-8151</li>
@@ -134,12 +135,12 @@ CSCI 221 Computer Programming II This course further develops object-oriented pr
 <h3>
 <a id="lecture-style" class="anchor" href="#lecture-style" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lecture Style</h3>
 
-<p>Lecturing about programming is like teaching someone how to swim by talking about swimming. Interesting, but not very helpful. This class has been designed with this in mind. We will be using a flipped classroom, where students are expected to listen to pre-recorded lectures outside of class. These are tightly integrated with the smaller programming assignments. We will discuss the problems themselves in class when appropriate. More importantly, most of our class time will be spent developing a "large" software project from scratch. The software we develop as a class is to serve as a template for your own large software project.</p>
+<p>Lecturing about programming is like teaching someone how to swim by talking about swimming. Interesting, but not very helpful. This makes this class ideal for a distance education course. Students are expected to listen to pre-recorded lectures, and then spend the majority of their time completing assignments and projects. The videos will also walk you through a complete software programming project from start to finish.</p>
 
 <h3>
 <a id="midterm-and-final" class="anchor" href="#midterm-and-final" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Midterm and Final</h3>
 
-<p>There will be one midterm covering approximately half of the material. The final exam will be cumulative. The final exam will be administered on the last day of class.</p>
+<p>There will be one midterm covering approximately half of the material. The final exam will be cumulative. Both will be administered within OAKS.</p>
 
 <h3>
 <a id="programming-assignments" class="anchor" href="#programming-assignments" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Programming Assignments</h3>
@@ -167,25 +168,11 @@ In any course deliverable, you must always identify the person(s) that helped yo
 Also see the College of Charleston Student Handbook, especially sections on The Honor Code (p. 11), and Student Code of Conduct (p. 12). There is other useful information there.
 Classroom Policies</p>
 
-<p>You are expected to take good notes during class.
-You are expected to participate in class with questions and invited discussion.
-You are expected to attend all classes. The grade 'WA' will be given for excessive (&gt;= 3) absences. If you miss class, you must get an absence memo from the Associate Dean of Students Office; also, you are responsible for announcements made in class, assignment due dates, etc.
-You should turn off all electronic devices (e.g., cell phones, pagers, etc.).
+<p>You are expected to participate with questions and invited discussion through the Facebook roup.
 In summary, you should contribute positively to the classroom learning experience, and respect your classmates right to learn (see College of Charleston Student Handbook, section on Classroom Code of Conduct (p. 58)).
 Late Policy</p>
 
 <p>No late days will be allowed without an excuse. Falling behind on assignments will make it difficult to achieve the learning outcomes of this course.</p>
-
-<h3>
-<a id="classroom-policies" class="anchor" href="#classroom-policies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Classroom Policies</h3>
-
-<ul>
-<li>You are expected to take good notes during class.</li>
-<li>You are expected to participate in class with questions and invited discussion.</li>
-<li>You are expected to attend all classes. The grade 'WA' will be given for excessive (&gt;= 3) absences. If you miss class, you must get an absence memo from the Associate Dean of Students Office; also, you are responsible for announcements made in class, assignment due dates, etc.</li>
-<li>You should turn off all electronic devices (e.g., cell phones, pagers, etc.).</li>
-<li>In summary, you should contribute positively to the classroom learning experience, and respect your classmates right to learn (see College of Charleston Student Handbook, section on Classroom Code of Conduct (p. 58)).</li>
-</ul>
 
 <h3>
 <a id="late-policy" class="anchor" href="#late-policy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Late Policy</h3>
